# fastAPI-microservice

./: .env  docker-compose.yml  exec  kubernetes.yml  pyproject.toml
gateway/: kong.conf  nginx-kong.conf  nginx.conf
monitor/prometheus/: config.yml
services/auth-service/: .env  docker-compose.yml  pyproject.toml
services/auth-service/app/: main.py
services/auth-service/app/config/: database.py  enum.py  exceptions.py  message_queue.py
services/auth-service/app/crud/: auth_controller.py
services/auth-service/app/models/: user_model.py
services/auth-service/app/schema/: request.py  response.py
services/batch-service/: docker-compose.yml  pyproject.toml
services/batch-service/app/: main.py
services/inventories-service/: docker-compose.yml  pyproject.toml
services/mail-service/: docker-compose.yml  pyproject.toml
services/order-service/: docker-compose.yml  pyproject.toml
services/product-service/: docker-compose.yml  pyproject.toml
services/user-service/: pyproject.toml
