[tool.poetry]
name = "dev"
version = "0.1.0"
description = "microserices with fastAPI (demo)"
authors = ["hoanglv"]
license = "niceboy72fx"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
