[tool.poetry]
name = "mail-service-package"
version = "0.1.0"
description = "mail's service"
authors = ["hoanglv"]
license = "niceboy72fx"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
