[tool.poetry]
name = "mail-service-package"
version = "0.1.0"
description = "mail's service"
authors = ["hoanglv"]
license = "niceboy72fx"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.37"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.34.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
